[gd_scene load_steps=3 format=3 uid="uid://du8cysfmaia3w"]

[ext_resource type="Script" path="res://addons/inventory_biely/script/dock/class.gd" id="1_tlyxu"]
[ext_resource type="Script" path="res://addons/inventory_biely/script/dock/list_item.gd" id="2_hpeo5"]

[node name="Class" type="PanelContainer"]
offset_right = 408.0
offset_bottom = 48.0
size_flags_vertical = 3
script = ExtResource("1_tlyxu")

[node name="Vbox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopBar" type="PanelContainer" parent="Vbox"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Hbox" type="HBoxContainer" parent="Vbox/TopBar"]
layout_mode = 2

[node name="id_unique" type="Label" parent="Vbox/TopBar/Hbox"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="name_class" type="Button" parent="Vbox/TopBar/Hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "new_class"
alignment = 0

[node name="edit_name" type="LineEdit" parent="Vbox/TopBar/Hbox/name_class"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="delete" type="Button" parent="Vbox/TopBar/Hbox"]
layout_mode = 2
text = "delete"

[node name="PanelItems" type="PanelContainer" parent="Vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Items" type="VBoxContainer" parent="Vbox/PanelItems"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_hpeo5")

[node name="Buttons" type="HBoxContainer" parent="Vbox"]
layout_mode = 2

[node name="New_item" type="Button" parent="Vbox/Buttons"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
text = "New item"

[connection signal="change_item" from="." to="Vbox/PanelItems/Items" method="_on_class_change_item"]
[connection signal="gui_input" from="Vbox/TopBar/Hbox/name_class" to="." method="_on_name_class_gui_input"]
[connection signal="focus_exited" from="Vbox/TopBar/Hbox/name_class/edit_name" to="." method="_on_edit_name_focus_exited"]
[connection signal="text_submitted" from="Vbox/TopBar/Hbox/name_class/edit_name" to="." method="_on_edit_name_text_submitted"]
[connection signal="pressed" from="Vbox/TopBar/Hbox/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Vbox/Buttons/New_item" to="." method="_on_new_item_pressed"]
